Fixed region label vertical alignment

--- a/src/styles/clipper.less
+++ b/src/styles/clipper.less
@@ -142,6 +142,13 @@
 	}
 }
 
+#regionButton {
+	.icon {
+		// For the region mode button, the icon is a little fatter so we need to reduce padding with the same amount
+		padding-right: 8px; // 12px - 4px
+	}
+}
+
 #regionSelectorContainer {
 	padding: 0;
 	margin: 0;
